# world_bank_data_rust

./: .gitignore  Cargo.toml  Cargo2.toml  LICENSE  README.md  pop.csv
.github/workflows/: deploy.yml  rust.yml
docs/: GUI.md
src/: api.rs  lib.rs  models.rs  stats.rs  storage.rs  style.rs  viz.rs  viz_plotters_adapter.rs  viz_style.rs
src/viz/: legend.rs  loess.rs  mod.rs  text.rs  types.rs  util.rs
tests/: api_live.rs  api_live_unit.rs  api_parsing.rs  api_unit_enrichment.rs  cli.rs  cli_live.rs  country_styles.rs  country_styles_render.rs  demo_functionality.rs  gui.rs  integration_units.rs  manual_api_unit_test.rs  models_and_meta.rs  stats_multi_indicator.rs  stats_summary.rs  storage_io.rs  unit_derivation.rs  unit_preference.rs  viz_extra_kinds.rs  viz_plotter_adapters_test.rs  viz_render.rs
