[package]
name = "world_bank_data_rust"
version = "0.1.1"
edition = "2024"
description = "A Rust library + CLI to fetch, store, visualize, and summarize World Bank indicator data."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://crates.io/world_bank_data_rust"
homepage = "https://crates.io/crates/world_bank_data_rust"
documentation = "https://docs.rs/world_bank_data_rust"
authors = ["Hendrik Lux"]
categories = [
    "command-line-utilities",
    "science",
    "visualization",
    "data-format",
    "multimedia::images",
]
keywords = ["data", "science", "visualization", "plotting", "world bank"]

[lib]
name = "world_bank_data_rust"
path = "src/lib.rs"

[[bin]]
name = "world_bank_data_rust"
path = "src/bin/world_bank_data_rust.rs"

[features]
# Enable this to run tests that hit the live World Bank API. Use: cargo test --features online
online = []

[dependencies]
anyhow = "1"
thiserror = "2.0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
plotters = "0.3.5"
plotters-svg = "0.3.5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
num-format = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
