[package]
name = "world_bank_data_rust"
version = "0.1.1"
edition = "2024"
description = "A Rust library + CLI to fetch, store, visualize, and summarize World Bank indicator data."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://crates.io/world_bank_data_rust"
homepage = "https://crates.io/crates/world_bank_data_rust"
documentation = "https://docs.rs/world_bank_data_rust"
authors = ["Hendrik Lux"]
categories = [
    "command-line-utilities",
    "science",
    "visualization",
    "data-format",
    "multimedia::images",
]
keywords = ["data", "science", "visualization", "plotting", "world bank"]

[lib]
name = "world_bank_data_rust"
path = "src/lib.rs"

[[bin]]
name = "world_bank_data_rust"
path = "src/bin/world_bank_data_rust.rs"

[features]
# Enable this to run tests that hit the live World Bank API. Use: cargo test --features online
online = []

[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
# Cargo.toml
reqwest = { version = "0.12.23", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
csv = "1.3.1"
clap = { version = "4.5.45", features = ["derive"] }
# Plotters with pure-Rust font path (no system fontconfig) and needed series/backends.
plotters = { version = "0.3.7", default-features = false, features = [
    "ab_glyph",
    "line_series",
    "area_series",
    "point_series",
    "svg_backend",
] }
# Bitmap backend with file output (`BitMapBackend::new`) via the `image` feature
plotters-bitmap = { version = "0.3.7", features = ["image"] }
plotters-svg = "0.3.7"
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.1"
num-format = "0.4.4"
tempfile = "3.20.0"
percent-encoding = "2.3.1"
ahash = "0.8.12"


[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
serde_json = "1.0.142"
